<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_info_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="se.palusa.v5librarybooks.InfoEdit"
    android:background="@android:color/black">

    <Button
        android:text="@string/deleteBook"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:id="@+id/buttonDelete"
        android:background="@color/colorAccent"
        android:textColor="@android:color/background_light"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/buttonUpdate"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonUpdate"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.17" />

    <TextView
        android:text="@string/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/titleAuthor"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:text="@string/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/updateAuthor" />

    <Button
        android:text="@string/updateBook"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:id="@+id/buttonUpdate"
        android:textColor="@android:color/background_light"
        android:background="@color/colorAccent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/updateAuthor" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/updateTitle"
        app:layout_constraintLeft_toLeftOf="@+id/updateAuthor"
        android:textColor="@android:color/white"
        android:hint="Add new @android:string/dialog_alert_title"
        app:layout_constraintBaseline_toBaselineOf="@+id/titleAuthor"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/updateAuthor"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toRightOf="@+id/textView4"
        android:textColor="@android:color/white"
        android:hint="add new Author"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateTitle" />
</android.support.constraint.ConstraintLayout>
