<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="se.palusa.v5librarybooks.MainActivity">

    <ListView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@android:id/list"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toBottomOf="@+id/authorInput"
        android:layout_marginTop="16dp" />

    <Button
        android:text="@string/addBook"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:id="@+id/addBook"
        android:background="@color/colorAccent"
        android:textColor="@android:color/background_light"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="37dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="16dp" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/titleInput"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/title"
        app:layout_constraintHorizontal_bias="0.66"
        app:layout_constraintRight_toLeftOf="@+id/addBook"
        android:layout_marginEnd="8dp" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/authorInput"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:hint="@string/author"
        app:layout_constraintHorizontal_bias="0.66"
        app:layout_constraintRight_toLeftOf="@+id/addBook"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/titleInput" />
</android.support.constraint.ConstraintLayout>
